<resources>
    <string name="app_name">Super TAXI</string>
    <string name="i_passenger">Я пассажир</string>
    <string name="i_driver">Я водитель</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="password_confirm">Повторите пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="press_to_login">Уже зарегистрированы?\nНажмите для входа</string>
    <string name="press_to_sign_up">Уже зарегистрированы?\nНажмите для входа</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="sign_out">Выйти</string>
    <string name="title_activity_passenger_maps">Map</string>
    <string name="choose_taxi">Заказать такси</string>
    <string name="find_taxi">Ищем машину...</string>



</resources>
