<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/logo_splash"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"

            android:text="@string/app_name"
            android:textSize="50sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/btnPassenger"
            android:layout_marginTop="300dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:text="@string/i_passenger"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/btnDriver"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/i_driver" />


    </LinearLayout>


</FrameLayout>